Change footer width from vw to % to prevent horizontal scrolling being possible

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,7 @@ body {
 .custom-footer {
     position: absolute;
     bottom: 0;
-    width: 100vw;
+    width: 100%;
 }
 
 .custom-footer p {
